--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Project</title>
+  <title>Todo List</title>
+  <link rel="icon" href="/React-TodoApp/assets/icons8-todo-list-64-BySlkXE8.png">
 
   <!--Font-->
   <link rel="preconnect" href="https://fonts.googleapis.com">
